--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/mee-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oumaima Lahouel</title>
+    <link rel="stylesheet" href="/public/style.css">
   </head>
   <body class="">
     <div id="root"></div>
